--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -3,35 +3,36 @@
         Buscar Libros
     </div>
     <div class="card-header">
+        <br>
         <form class="d-flex" role="search">
-
             <div class="col-4"></div>
-
+            <!-- Input Búsqueda -->
             <div class="col-4">
-                <div class="row">
-                    <input class="bg-dark text-bg-dark search-input form-control me-2" type="search"
-                        placeholder="Buscar por título o autor">
-                </div>
-                <div class="d-flex flex-column align-items-start">
-                    <div class="form-check">
+                <input class="bg-dark text-bg-dark search-input form-control" type="search"
+                    placeholder="Buscar por título o autor">
+                <br>
+                <!-- Filtros Checkbox -->
+                <div class="d-flex align-items-start">
+                    <div class="mr form-check">
                         <input type="checkbox" name="book-title" id="book-title" class="form-check-input mr">
                         <label class="form-check-label" for="book-title">Título</label>
                     </div>
-                    <div class="form-check">
+                    <div class="mr form-check">
                         <input type="checkbox" name="book-author" id="book-author" class="form-check-input mr">
                         <label class="form-check-label" for="book-author">Autor</label>
                     </div>
                 </div>
-
             </div>
-
-            <div class="col-4">
-                <button class="btn bg-dark bg-gradient text-bg-dark" type="submit">Buscar</button>
+            <!-- Botón Buscar -->
+            <div class="col-4 d-flex flex-column justify-content-start align-items-start">
+                <button class="ml btn bg-dark bg-gradient text-bg-dark" type="submit">Buscar</button>
             </div>
 
         </form>
     </div>
+    <!-- Body -->
     <div class="card-body container-size m-auto">
+        <!-- Listar Libros -->
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div *ngFor="let b of books" class="col">
                 <app-card-book [book]="b"></app-card-book>
