--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -5,23 +5,24 @@
     <div class="card-header">
         <br>
         <form class="d-flex" role="search">
-            <div class="col-4"></div>
+            <!-- Filtros Checkbox -->
+            <div class="col-4">
+                <div class="d-flex align-items-start">
+                    <div class="mr form-check form-switch">
+                        <input type="checkbox" name="book-title" id="book-title" class="form-check-input mr">
+                        <label class="form-check-label" for="book-title">Título</label>
+                    </div>
+                    <div class="mr form-check form-switch">
+                        <input type="checkbox" name="book-author" id="book-author" class="form-check-input mr">
+                        <label class="form-check-label" for="book-author">Autor</label>
+                    </div>
+                </div>
+            </div>
             <!-- Input Búsqueda -->
             <div class="col-4">
                 <input class="bg-dark text-bg-dark search-input form-control" type="search"
                     placeholder="Buscar por título o autor">
                 <br>
-                <!-- Filtros Checkbox -->
-                <div class="d-flex align-items-start">
-                    <div class="mr form-check">
-                        <input type="checkbox" name="book-title" id="book-title" class="form-check-input mr">
-                        <label class="form-check-label" for="book-title">Título</label>
-                    </div>
-                    <div class="mr form-check">
-                        <input type="checkbox" name="book-author" id="book-author" class="form-check-input mr">
-                        <label class="form-check-label" for="book-author">Autor</label>
-                    </div>
-                </div>
             </div>
             <!-- Botón Buscar -->
             <div class="col-4 d-flex flex-column justify-content-start align-items-start">
