--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -2,37 +2,40 @@
   <div class="card-header">Buscar Libros</div>
   <div class="card-header">
     <br />
-    <form class="d-flex" role="search">
+    <form #searchForm="ngForm" (ngSubmit)="getBooks(searchForm)" class="d-flex" role="search">
       <!-- Filtros Checkbox -->
       <div class="col-4">
         <div class="d-flex align-items-start">
-          <div class="mr form-check form-switch">
+          <!-- <div class="mr form-check form-switch">
             <input
+              ngModel
               type="checkbox"
-              name="book-title"
+              name="title"
+              checked
               id="book-title"
               class="form-check-input mr"
             />
-            <label class="form-check-label" for="book-title">Título</label>
-          </div>
+            <label class="form-check-label" for="title">Título</label>
+          </div> -->
           <div class="mr form-check form-switch">
             <input
+              ngModel
               type="checkbox"
-              name="book-author"
+              name="author"
               id="book-author"
               class="form-check-input mr"
             />
-            <label class="form-check-label" for="book-author">Autor</label>
+            <label class="form-check-label" for="author">Autor</label>
           </div>
         </div>
       </div>
       <!-- Input Búsqueda -->
       <div class="col-4">
         <input
-          [(ngModel)]="keyword"
+          ngModel
           class="bg-dark text-bg-dark search-input form-control"
           type="text"
-          name="search"
+          name="keyword"
           placeholder="Buscar por título o autor"
           autocomplete="off"
         />
@@ -43,7 +46,6 @@
         class="col-4 d-flex flex-column justify-content-start align-items-start"
       >
         <button
-          (click)="getBooksByKeyword()"
           class="ml btn bg-dark bg-gradient text-bg-dark"
           type="submit"
         >
