--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,10 @@
     <router-outlet></router-outlet>
 
     <app-list-books></app-list-books>
+    
+    <br><br>
 
+    <app-list-playlists></app-list-playlists>
+
+    <br><br><br><br><br>
 </div>
