--- a/src/app/components/card-playlist/card-playlist.component.html
+++ b/src/app/components/card-playlist/card-playlist.component.html
@@ -1,1 +1,18 @@
-<p>card-playlist works!</p>
+<div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+    <div class="card-header d-flex justify-content-end">
+        <div class="btn-group">
+            <button type="button" class="text-white btn btn-options dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false">
+            </button>
+            <ul class="dropdown-menu dropdown-menu-dark">
+                <button class="dropdown-item">Eliminar</button>
+            </ul>
+        </div>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">{{playlist.name}}</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+    </div>
+    <div class="card-footer bg-transparent">123 libros</div>
+</div>
