--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -1,5 +1,5 @@
 <div class="card text-center bg-success bg-gradient text-bg-dark">
-  <div class="card-header">Buscar Libros</div>
+  <h1 class="card-header">Buscar Libros</h1>
   <div class="card-header">
     <br />
     <form #searchForm="ngForm" (ngSubmit)="getBooks(searchForm)" class="d-flex" role="search">
