--- a/src/app/components/card-book/card-book.component.css
+++ b/src/app/components/card-book/card-book.component.css
@@ -37,6 +37,7 @@ img{
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+/* Badge */
 .badge-size{
     margin-top: 15px;
     /* margin-left: -20px;  */
@@ -46,3 +47,5 @@ img{
 .text-bg-custom{
     background-color: rgba(128, 128, 128, 0.11);
 }
+
+/*  */
