--- a/src/app/components/list-playlists/list-playlists.component.html
+++ b/src/app/components/list-playlists/list-playlists.component.html
@@ -1,7 +1,7 @@
 <div class="card text-center bg-success bg-gradient text-bg-dark">
     <h1 class="card-header">Playlists</h1>
     <div class="card-header d-flex justify-content-center">
-        <button class="btn btn-success border border-secondary-subtle">Crear playlist</button>
+        <button class="btn btn-dark bg-gradient">Crear playlist</button>
     </div>
     <!-- Body -->
     <div class="card-body container-size m-auto">
