--- a/src/app/components/card-playlist/card-playlist.component.html
+++ b/src/app/components/card-playlist/card-playlist.component.html
@@ -7,7 +7,7 @@
         <div class="col-md-8">
             <div class="card-body d-flex flex-column justify-content-between">
                 <h5 class="card-title">{{playlist.name}}</h5>
-                <span class="badge text-bg-custom position-absolute bottom-0 mb-2">123 libros</span>
+                <span class="badge text-bg-custom position-absolute bottom-0 mb-2">{{playlist.totalBooks}} libros</span>
                 <span class="position-absolute bottom-0 end-0">
                     <div class="dropdown">
                         <button class="btn text-white" type="button" id="dropdownMenuButton"
@@ -15,7 +15,7 @@
                             &#x22EE; <!-- Icono de 3 puntos -->
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" href="#">Eliminar</a></li>
+                            <button (click)="deletePlaylist(playlist.id)" class="dropdown-item">Eliminar</button>
                         </ul>
                     </div>
                 </span>
