--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Input type text custom */
+.search-input{
+    border: none;
+}
+
+.search-input:focus{
+    box-shadow: 0 .15rem .375rem rgba(0, 0, 0, 0.151);
+}
+
+.search-input::placeholder{
+    color: rgb(255, 255, 255);
+}
+
+/* Margins */
+.mr{
+    margin-right: 10px;
+}
+
+.ml{
+    margin-left: 10px;
+}
