--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -62,6 +62,9 @@
       <div *ngFor="let b of books" class="col">
         <app-card-book [book]="b"></app-card-book>
       </div>
+      <!-- <div class="col">
+        <app-card-book [bookList]="books"></app-card-book>
+      </div> -->
     </div>
   </div>
   <div class="card-footer text-body-secondary"></div>
