--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -54,6 +54,9 @@
         </button>
       </div>
     </form>
+    <div *ngIf="isLoading" class="spinner-border text-secondary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
   </div>
   <!-- Body -->
   <div class="card-body container-size m-auto">
