--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,14 @@
 <div class="container mt-3">
     <router-outlet></router-outlet>
 
-    <app-list-books></app-list-books>
+    <!-- <app-list-books></app-list-books> -->
     
     <br><br>
 
-    <app-list-playlists></app-list-playlists>
+    <!-- <app-list-playlists></app-list-playlists> -->
+    <br><br>
+
+    <app-manage-books></app-manage-books>
 
     <br><br><br><br><br>
 </div>
