--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -1,4 +1,4 @@
-<div class="card text-center bg-success bg-gradient text-bg-dark">
+<div id="search-books" class="card text-center bg-success bg-gradient text-bg-dark">
   <h1 class="card-header">Buscar Libros</h1>
   <div class="card-header">
     <br />
@@ -7,49 +7,24 @@
       <div class="col-4 d-flex justify-content-center">
         <div class="">
           <div class="mr form-check form-switch">
-            <input
-              ngModel
-              type="checkbox"
-              name="author"
-              id="book-author"
-              class="form-check-input mr"
-            />
+            <input ngModel type="checkbox" name="author" id="book-author" class="form-check-input mr" />
             <label class="form-check-label" for="author">Autor</label>
           </div>
           <div class="mr form-check form-switch">
-            <input
-              ngModel
-              disabled
-              type="checkbox"
-              name="title"
-              checked
-              id="book-title"
-              class="form-check-input mr"
-            />
+            <input ngModel disabled type="checkbox" name="title" checked id="book-title" class="form-check-input mr" />
             <label class="form-check-label" for="title">Otros...</label>
           </div>
         </div>
       </div>
       <!-- Input Búsqueda -->
       <div class="col-4">
-        <input
-          ngModel
-          class="bg-dark text-bg-dark search-input form-control"
-          type="text"
-          name="keyword"
-          placeholder="Buscar por título o autor"
-          autocomplete="off"
-        />
+        <input ngModel class="bg-dark text-bg-dark search-input form-control" type="text" name="keyword"
+          placeholder="Buscar por título o autor" autocomplete="off" />
         <br />
       </div>
       <!-- Botón Buscar -->
-      <div
-        class="col-4 d-flex flex-column justify-content-start align-items-start"
-      >
-        <button
-          class="ml btn bg-dark bg-gradient text-bg-dark"
-          type="submit"
-        >
+      <div class="col-4 d-flex flex-column justify-content-start align-items-start">
+        <button class="ml btn bg-dark bg-gradient text-bg-dark" type="submit">
           Buscar
         </button>
       </div>
@@ -70,5 +45,28 @@
       </div> -->
     </div>
   </div>
-  <div class="card-footer text-body-secondary"></div>
+  <div class="card-footer">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <button (click)="changePage(currentPage -1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
+            Anterior
+          </button>
+        </li>
+
+        <!-- Números paginación -->
+        <li *ngFor="let page of totalPages; index as i" class="page-item">
+          <button (click)="changePage(i)" class="border-0 bg-dark bg-gradient text-bg-dark page-link" href="#">
+            {{ i + 1 }}
+          </button>
+        </li>
+
+        <li class="page-item">
+          <button (click)="changePage(currentPage -1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
+            Siguiente
+          </button>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </div>
