--- a/src/app/components/card-playlist/card-playlist.component.html
+++ b/src/app/components/card-playlist/card-playlist.component.html
@@ -1,8 +1,8 @@
-
 <div class="card text-bg-dark mb-3" style="max-width: 540px;">
     <div class="row g-0">
         <div class="col-md-4">
-            <img [src]="playlist.firstBookImage || noImage" class="card-img-size img-fluid rounded-start" alt="...">
+            <img [src]="playlist.firstBookImage" (error)="playlist.firstBookImage = noImage"
+                class="card-img-size img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
             <div class="card-body d-flex flex-column justify-content-between">
@@ -10,8 +10,8 @@
                 <span class="badge text-bg-custom position-absolute bottom-0 mb-2">{{playlist.totalBooks}} libros</span>
                 <span class="position-absolute bottom-0 end-0">
                     <div class="dropdown">
-                        <button class="btn text-white" type="button" id="dropdownMenuButton"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn text-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             &#x22EE; <!-- Icono de 3 puntos -->
                         </button>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton">
