--- a/src/app/components/list-books/list-books.component.html
+++ b/src/app/components/list-books/list-books.component.html
@@ -49,7 +49,7 @@
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center">
         <li class="page-item">
-          <button (click)="changePage(currentPage -1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
+          <button (click)="changePage(currentPage - 1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
             Anterior
           </button>
         </li>
@@ -62,7 +62,7 @@
         </li>
 
         <li class="page-item">
-          <button (click)="changePage(currentPage -1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
+          <button (click)="changePage(currentPage + 1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
             Siguiente
           </button>
         </li>
