--- a/src/app/components/manage-books/manage-books.component.html
+++ b/src/app/components/manage-books/manage-books.component.html
@@ -94,7 +94,7 @@
         <nav aria-label="Page navigation example">
           <ul class="pagination justify-content-center">
             <li class="page-item">
-              <button (click)="changePage(currentPage -1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
+              <button (click)="changePage(currentPage - 1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
                 Anterior
               </button>
             </li>
@@ -107,7 +107,7 @@
             </li>
     
             <li class="page-item">
-              <button (click)="changePage(currentPage -1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
+              <button (click)="changePage(currentPage + 1)" class="border-0 bg-secondary bg-gradient text-bg-dark page-link" href="#">
                 Siguiente
               </button>
             </li>
